Frontend practice update on Oct 12

--- a/index.html
+++ b/index.html
@@ -227,3 +227,4 @@
 <!-- Practice on 2025-04-08 20:46:30 -->
 <!-- Practice on 2025-04-10 20:46:30 -->
 <!-- Practice on 2024-10-12 20:53:51 -->
+<!-- Practice on 2024-10-12 20:53:51 -->
