Frontend practice update on Oct 18

--- a/index.html
+++ b/index.html
@@ -233,3 +233,4 @@
 <!-- Practice on 2024-10-15 20:53:51 -->
 <!-- Practice on 2024-10-16 20:53:51 -->
 <!-- Practice on 2024-10-16 20:53:51 -->
+<!-- Practice on 2024-10-18 20:53:51 -->
