Frontend practice update on Oct 19

--- a/index.html
+++ b/index.html
@@ -5,3 +5,4 @@
 <!-- Practice on 2024-10-16 20:46:30 -->
 <!-- Practice on 2024-10-16 20:46:30 -->
 <!-- Practice on 2024-10-17 20:46:30 -->
+<!-- Practice on 2024-10-19 20:46:30 -->
