Frontend practice update on Oct 20

--- a/index.html
+++ b/index.html
@@ -237,3 +237,4 @@
 <!-- Practice on 2024-10-18 20:53:51 -->
 <!-- Practice on 2024-10-18 20:53:51 -->
 <!-- Practice on 2024-10-19 20:53:51 -->
+<!-- Practice on 2024-10-20 20:53:51 -->
