Frontend practice update on Oct 21

--- a/index.html
+++ b/index.html
@@ -238,3 +238,4 @@
 <!-- Practice on 2024-10-18 20:53:51 -->
 <!-- Practice on 2024-10-19 20:53:51 -->
 <!-- Practice on 2024-10-20 20:53:51 -->
+<!-- Practice on 2024-10-21 20:53:51 -->
