Frontend practice update on Oct 22

--- a/index.html
+++ b/index.html
@@ -7,3 +7,4 @@
 <!-- Practice on 2024-10-17 20:46:30 -->
 <!-- Practice on 2024-10-19 20:46:30 -->
 <!-- Practice on 2024-10-22 20:46:30 -->
+<!-- Practice on 2024-10-22 20:46:30 -->
