Frontend practice update on Oct 23

--- a/index.html
+++ b/index.html
@@ -240,3 +240,4 @@
 <!-- Practice on 2024-10-20 20:53:51 -->
 <!-- Practice on 2024-10-21 20:53:51 -->
 <!-- Practice on 2024-10-23 20:53:51 -->
+<!-- Practice on 2024-10-23 20:53:51 -->
