Frontend practice update on Oct 27

--- a/index.html
+++ b/index.html
@@ -244,3 +244,4 @@
 <!-- Practice on 2024-10-25 20:53:51 -->
 <!-- Practice on 2024-10-25 20:53:51 -->
 <!-- Practice on 2024-10-26 20:53:51 -->
+<!-- Practice on 2024-10-27 20:53:51 -->
