Frontend practice update on Oct 27

--- a/index.html
+++ b/index.html
@@ -17,3 +17,4 @@
 <!-- Practice on 2024-10-25 20:46:30 -->
 <!-- Practice on 2024-10-26 20:46:30 -->
 <!-- Practice on 2024-10-26 20:46:30 -->
+<!-- Practice on 2024-10-27 20:46:30 -->
