Frontend practice update on Oct 28

--- a/index.html
+++ b/index.html
@@ -246,3 +246,4 @@
 <!-- Practice on 2024-10-26 20:53:51 -->
 <!-- Practice on 2024-10-27 20:53:51 -->
 <!-- Practice on 2024-10-28 20:53:51 -->
+<!-- Practice on 2024-10-28 20:53:51 -->
