Frontend practice update on Oct 28

--- a/index.html
+++ b/index.html
@@ -20,3 +20,4 @@
 <!-- Practice on 2024-10-27 20:46:30 -->
 <!-- Practice on 2024-10-27 20:46:30 -->
 <!-- Practice on 2024-10-27 20:46:30 -->
+<!-- Practice on 2024-10-28 20:46:30 -->
