Frontend practice update on Oct 30

--- a/index.html
+++ b/index.html
@@ -25,3 +25,4 @@
 <!-- Practice on 2024-10-29 20:46:30 -->
 <!-- Practice on 2024-10-30 20:46:30 -->
 <!-- Practice on 2024-10-30 20:46:30 -->
+<!-- Practice on 2024-10-30 20:46:30 -->
