Frontend practice update on Nov 01

--- a/index.html
+++ b/index.html
@@ -26,3 +26,4 @@
 <!-- Practice on 2024-10-30 20:46:30 -->
 <!-- Practice on 2024-10-30 20:46:30 -->
 <!-- Practice on 2024-10-30 20:46:30 -->
+<!-- Practice on 2024-11-01 20:46:30 -->
