Frontend practice update on Nov 03

--- a/index.html
+++ b/index.html
@@ -29,3 +29,4 @@
 <!-- Practice on 2024-11-01 20:46:30 -->
 <!-- Practice on 2024-11-01 20:46:30 -->
 <!-- Practice on 2024-11-01 20:46:30 -->
+<!-- Practice on 2024-11-03 20:46:30 -->
