Frontend practice update on Nov 06

--- a/index.html
+++ b/index.html
@@ -259,3 +259,4 @@
 <!-- Practice on 2024-11-05 20:53:51 -->
 <!-- Practice on 2024-11-06 20:53:51 -->
 <!-- Practice on 2024-11-06 20:53:51 -->
+<!-- Practice on 2024-11-06 20:53:51 -->
