--- a/index.html
+++ b/index.html
@@ -31,3 +31,4 @@
 <!-- Practice on 2024-11-01 20:46:30 -->
 <!-- Practice on 2024-11-03 20:46:30 -->
 <!-- Practice on 2024-11-05 20:46:30 -->
+<!-- Practice on 2024-11-06 20:46:30 -->
