Frontend practice update on Nov 13

--- a/index.html
+++ b/index.html
@@ -270,3 +270,4 @@
 <!-- Practice on 2024-11-11 20:53:51 -->
 <!-- Practice on 2024-11-12 20:53:51 -->
 <!-- Practice on 2024-11-13 20:53:51 -->
+<!-- Practice on 2024-11-13 20:53:51 -->
