Frontend practice update on Nov 14

--- a/index.html
+++ b/index.html
@@ -41,3 +41,4 @@
 <!-- Practice on 2024-11-13 20:46:30 -->
 <!-- Practice on 2024-11-14 20:46:30 -->
 <!-- Practice on 2024-11-14 20:46:30 -->
+<!-- Practice on 2024-11-14 20:46:30 -->
