Frontend practice update on Nov 17

--- a/index.html
+++ b/index.html
@@ -43,3 +43,4 @@
 <!-- Practice on 2024-11-14 20:46:30 -->
 <!-- Practice on 2024-11-14 20:46:30 -->
 <!-- Practice on 2024-11-15 20:46:30 -->
+<!-- Practice on 2024-11-17 20:46:30 -->
