Frontend practice update on Nov 18

--- a/index.html
+++ b/index.html
@@ -276,3 +276,4 @@
 <!-- Practice on 2024-11-15 20:53:51 -->
 <!-- Practice on 2024-11-16 20:53:51 -->
 <!-- Practice on 2024-11-17 20:53:51 -->
+<!-- Practice on 2024-11-18 20:53:51 -->
