Frontend practice update on Nov 19

--- a/index.html
+++ b/index.html
@@ -45,3 +45,4 @@
 <!-- Practice on 2024-11-15 20:46:30 -->
 <!-- Practice on 2024-11-17 20:46:30 -->
 <!-- Practice on 2024-11-18 20:46:30 -->
+<!-- Practice on 2024-11-19 20:46:30 -->
