Frontend practice update on Nov 20

--- a/index.html
+++ b/index.html
@@ -281,3 +281,4 @@
 <!-- Practice on 2024-11-19 20:53:51 -->
 <!-- Practice on 2024-11-20 20:53:51 -->
 <!-- Practice on 2024-11-20 20:53:51 -->
+<!-- Practice on 2024-11-20 20:53:51 -->
