Frontend practice update on Nov 21

--- a/index.html
+++ b/index.html
@@ -47,3 +47,4 @@
 <!-- Practice on 2024-11-18 20:46:30 -->
 <!-- Practice on 2024-11-19 20:46:30 -->
 <!-- Practice on 2024-11-19 20:46:30 -->
+<!-- Practice on 2024-11-21 20:46:30 -->
