Frontend practice update on Nov 22

--- a/index.html
+++ b/index.html
@@ -283,3 +283,4 @@
 <!-- Practice on 2024-11-20 20:53:51 -->
 <!-- Practice on 2024-11-20 20:53:51 -->
 <!-- Practice on 2024-11-21 20:53:51 -->
+<!-- Practice on 2024-11-22 20:53:51 -->
