Frontend practice update on Nov 23

--- a/index.html
+++ b/index.html
@@ -50,3 +50,4 @@
 <!-- Practice on 2024-11-21 20:46:30 -->
 <!-- Practice on 2024-11-22 20:46:30 -->
 <!-- Practice on 2024-11-23 20:46:30 -->
+<!-- Practice on 2024-11-23 20:46:30 -->
