Frontend practice update on Nov 24

--- a/index.html
+++ b/index.html
@@ -284,3 +284,4 @@
 <!-- Practice on 2024-11-20 20:53:51 -->
 <!-- Practice on 2024-11-21 20:53:51 -->
 <!-- Practice on 2024-11-22 20:53:51 -->
+<!-- Practice on 2024-11-24 20:53:51 -->
