Frontend practice update on Nov 27

--- a/index.html
+++ b/index.html
@@ -287,3 +287,4 @@
 <!-- Practice on 2024-11-24 20:53:51 -->
 <!-- Practice on 2024-11-24 20:53:51 -->
 <!-- Practice on 2024-11-26 20:53:51 -->
+<!-- Practice on 2024-11-27 20:53:51 -->
