Frontend practice update on Nov 28

--- a/index.html
+++ b/index.html
@@ -289,3 +289,4 @@
 <!-- Practice on 2024-11-26 20:53:51 -->
 <!-- Practice on 2024-11-27 20:53:51 -->
 <!-- Practice on 2024-11-27 20:53:51 -->
+<!-- Practice on 2024-11-28 20:53:51 -->
