Frontend practice update on Nov 28

--- a/index.html
+++ b/index.html
@@ -60,3 +60,4 @@
 <!-- Practice on 2024-11-26 20:46:30 -->
 <!-- Practice on 2024-11-26 20:46:30 -->
 <!-- Practice on 2024-11-27 20:46:30 -->
+<!-- Practice on 2024-11-28 20:46:30 -->
