Frontend practice update on Dec 01

--- a/index.html
+++ b/index.html
@@ -292,3 +292,4 @@
 <!-- Practice on 2024-11-28 20:53:51 -->
 <!-- Practice on 2024-11-29 20:53:51 -->
 <!-- Practice on 2024-12-01 20:53:51 -->
+<!-- Practice on 2024-12-01 20:53:51 -->
