Frontend practice update on Dec 03

--- a/index.html
+++ b/index.html
@@ -66,3 +66,4 @@
 <!-- Practice on 2024-11-29 20:46:30 -->
 <!-- Practice on 2024-12-02 20:46:30 -->
 <!-- Practice on 2024-12-03 20:46:30 -->
+<!-- Practice on 2024-12-03 20:46:30 -->
