Frontend practice update on Dec 03

--- a/index.html
+++ b/index.html
@@ -296,3 +296,4 @@
 <!-- Practice on 2024-12-02 20:53:51 -->
 <!-- Practice on 2024-12-03 20:53:51 -->
 <!-- Practice on 2024-12-03 20:53:51 -->
+<!-- Practice on 2024-12-03 20:53:51 -->
