--- a/index.html
+++ b/index.html
@@ -70,3 +70,4 @@
 <!-- Practice on 2024-12-04 20:46:30 -->
 <!-- Practice on 2024-12-04 20:46:30 -->
 <!-- Practice on 2024-12-05 20:46:30 -->
+<!-- Practice on 2024-12-06 20:46:30 -->
