--- a/index.html
+++ b/index.html
@@ -72,3 +72,4 @@
 <!-- Practice on 2024-12-05 20:46:30 -->
 <!-- Practice on 2024-12-06 20:46:30 -->
 <!-- Practice on 2024-12-06 20:46:30 -->
+<!-- Practice on 2024-12-07 20:46:30 -->
