Frontend practice update on Dec 09

--- a/index.html
+++ b/index.html
@@ -77,3 +77,4 @@
 <!-- Practice on 2024-12-07 20:46:30 -->
 <!-- Practice on 2024-12-09 20:46:30 -->
 <!-- Practice on 2024-12-09 20:46:30 -->
+<!-- Practice on 2024-12-09 20:46:30 -->
