Frontend practice update on Dec 10

--- a/index.html
+++ b/index.html
@@ -78,3 +78,4 @@
 <!-- Practice on 2024-12-09 20:46:30 -->
 <!-- Practice on 2024-12-09 20:46:30 -->
 <!-- Practice on 2024-12-09 20:46:30 -->
+<!-- Practice on 2024-12-10 20:46:30 -->
