Frontend practice update on Dec 13

--- a/index.html
+++ b/index.html
@@ -303,3 +303,4 @@
 <!-- Practice on 2024-12-10 20:53:51 -->
 <!-- Practice on 2024-12-11 20:53:51 -->
 <!-- Practice on 2024-12-12 20:53:51 -->
+<!-- Practice on 2024-12-13 20:53:51 -->
