Frontend practice update on Dec 15

--- a/index.html
+++ b/index.html
@@ -306,3 +306,4 @@
 <!-- Practice on 2024-12-13 20:53:51 -->
 <!-- Practice on 2024-12-15 20:53:51 -->
 <!-- Practice on 2024-12-15 20:53:51 -->
+<!-- Practice on 2024-12-15 20:53:51 -->
