Frontend practice update on Dec 17

--- a/index.html
+++ b/index.html
@@ -308,3 +308,4 @@
 <!-- Practice on 2024-12-15 20:53:51 -->
 <!-- Practice on 2024-12-15 20:53:51 -->
 <!-- Practice on 2024-12-16 20:53:51 -->
+<!-- Practice on 2024-12-17 20:53:51 -->
