Frontend practice update on Dec 17

--- a/index.html
+++ b/index.html
@@ -79,3 +79,4 @@
 <!-- Practice on 2024-12-09 20:46:30 -->
 <!-- Practice on 2024-12-09 20:46:30 -->
 <!-- Practice on 2024-12-10 20:46:30 -->
+<!-- Practice on 2024-12-17 20:46:30 -->
