--- a/index.html
+++ b/index.html
@@ -309,3 +309,4 @@
 <!-- Practice on 2024-12-15 20:53:51 -->
 <!-- Practice on 2024-12-16 20:53:51 -->
 <!-- Practice on 2024-12-17 20:53:51 -->
+<!-- Practice on 2024-12-18 20:53:51 -->
