--- a/index.html
+++ b/index.html
@@ -80,3 +80,4 @@
 <!-- Practice on 2024-12-09 20:46:30 -->
 <!-- Practice on 2024-12-10 20:46:30 -->
 <!-- Practice on 2024-12-17 20:46:30 -->
+<!-- Practice on 2024-12-18 20:46:30 -->
