Frontend practice update on Dec 19

--- a/index.html
+++ b/index.html
@@ -312,3 +312,4 @@
 <!-- Practice on 2024-12-18 20:53:51 -->
 <!-- Practice on 2024-12-18 20:53:51 -->
 <!-- Practice on 2024-12-18 20:53:51 -->
+<!-- Practice on 2024-12-19 20:53:51 -->
