Frontend practice update on Dec 21

--- a/index.html
+++ b/index.html
@@ -317,3 +317,4 @@
 <!-- Practice on 2024-12-20 20:53:51 -->
 <!-- Practice on 2024-12-20 20:53:51 -->
 <!-- Practice on 2024-12-20 20:53:51 -->
+<!-- Practice on 2024-12-21 20:53:51 -->
