Frontend practice update on Dec 24

--- a/index.html
+++ b/index.html
@@ -84,3 +84,4 @@
 <!-- Practice on 2024-12-21 20:46:30 -->
 <!-- Practice on 2024-12-22 20:46:30 -->
 <!-- Practice on 2024-12-24 20:46:30 -->
+<!-- Practice on 2024-12-24 20:46:30 -->
