Frontend practice update on Dec 28

--- a/index.html
+++ b/index.html
@@ -88,3 +88,4 @@
 <!-- Practice on 2024-12-25 20:46:30 -->
 <!-- Practice on 2024-12-26 20:46:30 -->
 <!-- Practice on 2024-12-27 20:46:30 -->
+<!-- Practice on 2024-12-28 20:46:30 -->
