Frontend practice update on Jan 04

--- a/index.html
+++ b/index.html
@@ -95,3 +95,4 @@
 <!-- Practice on 2025-01-01 20:46:30 -->
 <!-- Practice on 2025-01-03 20:46:30 -->
 <!-- Practice on 2025-01-03 20:46:30 -->
+<!-- Practice on 2025-01-04 20:46:30 -->
