Frontend practice update on Jan 05

--- a/index.html
+++ b/index.html
@@ -334,3 +334,4 @@
 <!-- Practice on 2025-01-03 20:53:51 -->
 <!-- Practice on 2025-01-03 20:53:51 -->
 <!-- Practice on 2025-01-05 20:53:51 -->
+<!-- Practice on 2025-01-05 20:53:51 -->
