Frontend practice update on Jan 11

--- a/index.html
+++ b/index.html
@@ -103,3 +103,4 @@
 <!-- Practice on 2025-01-09 20:46:30 -->
 <!-- Practice on 2025-01-09 20:46:30 -->
 <!-- Practice on 2025-01-09 20:46:30 -->
+<!-- Practice on 2025-01-11 20:46:30 -->
