Frontend practice update on Jan 13

--- a/index.html
+++ b/index.html
@@ -340,3 +340,4 @@
 <!-- Practice on 2025-01-09 20:53:51 -->
 <!-- Practice on 2025-01-11 20:53:51 -->
 <!-- Practice on 2025-01-11 20:53:51 -->
+<!-- Practice on 2025-01-13 20:53:51 -->
