Frontend practice update on Jan 13

--- a/index.html
+++ b/index.html
@@ -107,3 +107,4 @@
 <!-- Practice on 2025-01-12 20:46:30 -->
 <!-- Practice on 2025-01-12 20:46:30 -->
 <!-- Practice on 2025-01-12 20:46:30 -->
+<!-- Practice on 2025-01-13 20:46:30 -->
