Frontend practice update on Jan 14

--- a/index.html
+++ b/index.html
@@ -343,3 +343,4 @@
 <!-- Practice on 2025-01-13 20:53:51 -->
 <!-- Practice on 2025-01-14 20:53:51 -->
 <!-- Practice on 2025-01-14 20:53:51 -->
+<!-- Practice on 2025-01-14 20:53:51 -->
