Frontend practice update on Jan 15

--- a/index.html
+++ b/index.html
@@ -344,3 +344,4 @@
 <!-- Practice on 2025-01-14 20:53:51 -->
 <!-- Practice on 2025-01-14 20:53:51 -->
 <!-- Practice on 2025-01-14 20:53:51 -->
+<!-- Practice on 2025-01-15 20:53:51 -->
