Frontend practice update on Jan 21

--- a/index.html
+++ b/index.html
@@ -121,3 +121,4 @@
 <!-- Practice on 2025-01-20 20:46:30 -->
 <!-- Practice on 2025-01-20 20:46:30 -->
 <!-- Practice on 2025-01-20 20:46:30 -->
+<!-- Practice on 2025-01-21 20:46:30 -->
