Frontend practice update on Jan 24

--- a/index.html
+++ b/index.html
@@ -125,3 +125,4 @@
 <!-- Practice on 2025-01-23 20:46:30 -->
 <!-- Practice on 2025-01-23 20:46:30 -->
 <!-- Practice on 2025-01-23 20:46:30 -->
+<!-- Practice on 2025-01-24 20:46:30 -->
