Frontend practice update on Jan 27

--- a/index.html
+++ b/index.html
@@ -128,3 +128,4 @@
 <!-- Practice on 2025-01-24 20:46:30 -->
 <!-- Practice on 2025-01-25 20:46:30 -->
 <!-- Practice on 2025-01-26 20:46:30 -->
+<!-- Practice on 2025-01-27 20:46:30 -->
