Frontend practice update on Jan 28

--- a/index.html
+++ b/index.html
@@ -131,3 +131,4 @@
 <!-- Practice on 2025-01-27 20:46:30 -->
 <!-- Practice on 2025-01-28 20:46:30 -->
 <!-- Practice on 2025-01-28 20:46:30 -->
+<!-- Practice on 2025-01-28 20:46:30 -->
