Frontend practice update on Jan 29

--- a/index.html
+++ b/index.html
@@ -132,3 +132,4 @@
 <!-- Practice on 2025-01-28 20:46:30 -->
 <!-- Practice on 2025-01-28 20:46:30 -->
 <!-- Practice on 2025-01-28 20:46:30 -->
+<!-- Practice on 2025-01-29 20:46:30 -->
