Frontend practice update on Jan 29

--- a/index.html
+++ b/index.html
@@ -358,3 +358,4 @@
 <!-- Practice on 2025-01-23 20:53:51 -->
 <!-- Practice on 2025-01-24 20:53:51 -->
 <!-- Practice on 2025-01-26 20:53:51 -->
+<!-- Practice on 2025-01-29 20:53:51 -->
