Frontend practice update on Jan 30

--- a/index.html
+++ b/index.html
@@ -135,3 +135,4 @@
 <!-- Practice on 2025-01-29 20:46:30 -->
 <!-- Practice on 2025-01-29 20:46:30 -->
 <!-- Practice on 2025-01-30 20:46:30 -->
+<!-- Practice on 2025-01-30 20:46:30 -->
