Frontend practice update on Feb 05

--- a/index.html
+++ b/index.html
@@ -144,3 +144,4 @@
 <!-- Practice on 2025-02-02 20:46:30 -->
 <!-- Practice on 2025-02-03 20:46:30 -->
 <!-- Practice on 2025-02-03 20:46:30 -->
+<!-- Practice on 2025-02-05 20:46:30 -->
