Frontend practice update on Feb 06

--- a/index.html
+++ b/index.html
@@ -148,3 +148,4 @@
 <!-- Practice on 2025-02-05 20:46:30 -->
 <!-- Practice on 2025-02-06 20:46:30 -->
 <!-- Practice on 2025-02-06 20:46:30 -->
+<!-- Practice on 2025-02-06 20:46:30 -->
