Frontend practice update on Feb 07

--- a/index.html
+++ b/index.html
@@ -151,3 +151,4 @@
 <!-- Practice on 2025-02-06 20:46:30 -->
 <!-- Practice on 2025-02-07 20:46:30 -->
 <!-- Practice on 2025-02-07 20:46:30 -->
+<!-- Practice on 2025-02-07 20:46:30 -->
