Frontend practice update on Feb 11

--- a/index.html
+++ b/index.html
@@ -372,3 +372,4 @@
 <!-- Practice on 2025-02-10 20:53:51 -->
 <!-- Practice on 2025-02-11 20:53:51 -->
 <!-- Practice on 2025-02-11 20:53:51 -->
+<!-- Practice on 2025-02-11 20:53:51 -->
