Frontend practice update on Feb 12

--- a/index.html
+++ b/index.html
@@ -154,3 +154,4 @@
 <!-- Practice on 2025-02-07 20:46:30 -->
 <!-- Practice on 2025-02-09 20:46:30 -->
 <!-- Practice on 2025-02-11 20:46:30 -->
+<!-- Practice on 2025-02-12 20:46:30 -->
