Frontend practice update on Feb 15

--- a/index.html
+++ b/index.html
@@ -377,3 +377,4 @@
 <!-- Practice on 2025-02-14 20:53:51 -->
 <!-- Practice on 2025-02-15 20:53:51 -->
 <!-- Practice on 2025-02-15 20:53:51 -->
+<!-- Practice on 2025-02-15 20:53:51 -->
