Frontend practice update on Feb 15

--- a/index.html
+++ b/index.html
@@ -375,3 +375,4 @@
 <!-- Practice on 2025-02-11 20:53:51 -->
 <!-- Practice on 2025-02-13 20:53:51 -->
 <!-- Practice on 2025-02-14 20:53:51 -->
+<!-- Practice on 2025-02-15 20:53:51 -->
