Frontend practice update on Feb 18

--- a/index.html
+++ b/index.html
@@ -159,3 +159,4 @@
 <!-- Practice on 2025-02-12 20:46:30 -->
 <!-- Practice on 2025-02-13 20:46:30 -->
 <!-- Practice on 2025-02-18 20:46:30 -->
+<!-- Practice on 2025-02-18 20:46:30 -->
