Frontend practice update on Feb 20

--- a/index.html
+++ b/index.html
@@ -381,3 +381,4 @@
 <!-- Practice on 2025-02-19 20:53:51 -->
 <!-- Practice on 2025-02-19 20:53:51 -->
 <!-- Practice on 2025-02-19 20:53:51 -->
+<!-- Practice on 2025-02-20 20:53:51 -->
