Frontend practice update on Feb 23

--- a/index.html
+++ b/index.html
@@ -164,3 +164,4 @@
 <!-- Practice on 2025-02-19 20:46:30 -->
 <!-- Practice on 2025-02-20 20:46:30 -->
 <!-- Practice on 2025-02-20 20:46:30 -->
+<!-- Practice on 2025-02-23 20:46:30 -->
