Frontend practice update on Feb 23

--- a/index.html
+++ b/index.html
@@ -388,3 +388,4 @@
 <!-- Practice on 2025-02-21 20:53:51 -->
 <!-- Practice on 2025-02-22 20:53:51 -->
 <!-- Practice on 2025-02-23 20:53:51 -->
+<!-- Practice on 2025-02-23 20:53:51 -->
