Frontend practice update on Feb 25

--- a/index.html
+++ b/index.html
@@ -167,3 +167,4 @@
 <!-- Practice on 2025-02-23 20:46:30 -->
 <!-- Practice on 2025-02-23 20:46:30 -->
 <!-- Practice on 2025-02-23 20:46:30 -->
+<!-- Practice on 2025-02-25 20:46:30 -->
