Frontend practice update on Feb 27

--- a/index.html
+++ b/index.html
@@ -170,3 +170,4 @@
 <!-- Practice on 2025-02-25 20:46:30 -->
 <!-- Practice on 2025-02-26 20:46:30 -->
 <!-- Practice on 2025-02-26 20:46:30 -->
+<!-- Practice on 2025-02-27 20:46:30 -->
