Frontend practice update on Feb 28

--- a/index.html
+++ b/index.html
@@ -393,3 +393,4 @@
 <!-- Practice on 2025-02-24 20:53:51 -->
 <!-- Practice on 2025-02-25 20:53:51 -->
 <!-- Practice on 2025-02-28 20:53:51 -->
+<!-- Practice on 2025-02-28 20:53:51 -->
