Frontend practice update on Mar 04

--- a/index.html
+++ b/index.html
@@ -396,3 +396,4 @@
 <!-- Practice on 2025-02-28 20:53:51 -->
 <!-- Practice on 2025-03-03 20:53:51 -->
 <!-- Practice on 2025-03-04 20:53:51 -->
+<!-- Practice on 2025-03-04 20:53:51 -->
