Frontend practice update on Mar 10

--- a/index.html
+++ b/index.html
@@ -181,3 +181,4 @@
 <!-- Practice on 2025-03-09 20:46:30 -->
 <!-- Practice on 2025-03-10 20:46:30 -->
 <!-- Practice on 2025-03-10 20:46:30 -->
+<!-- Practice on 2025-03-10 20:46:30 -->
