Frontend practice update on Mar 11

--- a/index.html
+++ b/index.html
@@ -184,3 +184,4 @@
 <!-- Practice on 2025-03-10 20:46:30 -->
 <!-- Practice on 2025-03-11 20:46:30 -->
 <!-- Practice on 2025-03-11 20:46:30 -->
+<!-- Practice on 2025-03-11 20:46:30 -->
