Frontend practice update on Mar 14

--- a/index.html
+++ b/index.html
@@ -186,3 +186,4 @@
 <!-- Practice on 2025-03-11 20:46:30 -->
 <!-- Practice on 2025-03-11 20:46:30 -->
 <!-- Practice on 2025-03-12 20:46:30 -->
+<!-- Practice on 2025-03-14 20:46:30 -->
