Frontend practice update on Mar 16

--- a/index.html
+++ b/index.html
@@ -407,3 +407,4 @@
 <!-- Practice on 2025-03-11 20:53:51 -->
 <!-- Practice on 2025-03-14 20:53:51 -->
 <!-- Practice on 2025-03-15 20:53:51 -->
+<!-- Practice on 2025-03-16 20:53:51 -->
