Frontend practice update on Mar 18

--- a/index.html
+++ b/index.html
@@ -194,3 +194,4 @@
 <!-- Practice on 2025-03-16 20:46:30 -->
 <!-- Practice on 2025-03-17 20:46:30 -->
 <!-- Practice on 2025-03-18 20:46:30 -->
+<!-- Practice on 2025-03-18 20:46:30 -->
