Frontend practice update on Mar 20

--- a/index.html
+++ b/index.html
@@ -198,3 +198,4 @@
 <!-- Practice on 2025-03-18 20:46:30 -->
 <!-- Practice on 2025-03-19 20:46:30 -->
 <!-- Practice on 2025-03-20 20:46:30 -->
+<!-- Practice on 2025-03-20 20:46:30 -->
