Frontend practice update on Mar 26

--- a/index.html
+++ b/index.html
@@ -423,3 +423,4 @@
 <!-- Practice on 2025-03-25 20:53:51 -->
 <!-- Practice on 2025-03-25 20:53:51 -->
 <!-- Practice on 2025-03-25 20:53:51 -->
+<!-- Practice on 2025-03-26 20:53:51 -->
