Frontend practice update on Mar 28

--- a/index.html
+++ b/index.html
@@ -206,3 +206,4 @@
 <!-- Practice on 2025-03-27 20:46:30 -->
 <!-- Practice on 2025-03-27 20:46:30 -->
 <!-- Practice on 2025-03-27 20:46:30 -->
+<!-- Practice on 2025-03-28 20:46:30 -->
