Frontend practice update on Mar 30

--- a/index.html
+++ b/index.html
@@ -429,3 +429,4 @@
 <!-- Practice on 2025-03-27 20:53:51 -->
 <!-- Practice on 2025-03-27 20:53:51 -->
 <!-- Practice on 2025-03-29 20:53:51 -->
+<!-- Practice on 2025-03-30 20:53:51 -->
