Frontend practice update on Mar 31

--- a/index.html
+++ b/index.html
@@ -211,3 +211,4 @@
 <!-- Practice on 2025-03-29 20:46:30 -->
 <!-- Practice on 2025-03-30 20:46:30 -->
 <!-- Practice on 2025-03-31 20:46:30 -->
+<!-- Practice on 2025-03-31 20:46:30 -->
