Frontend practice update on Apr 05

--- a/index.html
+++ b/index.html
@@ -218,3 +218,4 @@
 <!-- Practice on 2025-04-03 20:46:30 -->
 <!-- Practice on 2025-04-03 20:46:30 -->
 <!-- Practice on 2025-04-04 20:46:30 -->
+<!-- Practice on 2025-04-05 20:46:30 -->
