Frontend practice update on Apr 06

--- a/index.html
+++ b/index.html
@@ -437,3 +437,4 @@
 <!-- Practice on 2025-04-02 20:53:51 -->
 <!-- Practice on 2025-04-04 20:53:51 -->
 <!-- Practice on 2025-04-06 20:53:51 -->
+<!-- Practice on 2025-04-06 20:53:51 -->
