Frontend practice update on Apr 08

--- a/index.html
+++ b/index.html
@@ -441,3 +441,4 @@
 <!-- Practice on 2025-04-06 20:53:51 -->
 <!-- Practice on 2025-04-08 20:53:51 -->
 <!-- Practice on 2025-04-08 20:53:51 -->
+<!-- Practice on 2025-04-08 20:53:51 -->
