improved placeholder text and input types

--- a/frontend-practice-files/contact-form/index.html
+++ b/frontend-practice-files/contact-form/index.html
@@ -1,1 +1,22 @@
-<!-- index.html for contact-form -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Contact Form</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <form id="contactForm">
+    <h2>Contact Me</h2>
+    <input type="text" id="name" placeholder="Your Name" required>
+    <input type="email" id="email" placeholder="Your Email" required>
+    <textarea id="message" placeholder="Your Message" required></textarea>
+    <button type="submit">Send</button>
+    <p class="form-status"></p>
+  </form>
+
+  <script src="script.js"></script>
+</body>
+</html>
+
