Frontend practice update on Apr 10

--- a/index.html
+++ b/index.html
@@ -225,3 +225,4 @@
 <!-- Practice on 2025-04-06 20:46:30 -->
 <!-- Practice on 2025-04-06 20:46:30 -->
 <!-- Practice on 2025-04-08 20:46:30 -->
+<!-- Practice on 2025-04-10 20:46:30 -->
